# dcm2niix

./: README.md
console/: CMakeLists.txt  _dcm2nii.h  main_console.cpp  makefile  nifti1_io_core.cpp  nifti1_io_core.h  nii_dicom.cpp  nii_dicom.h  nii_dicom_batch.cpp  nii_dicom_batch.h  nii_ortho.cpp
